--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             justify-content: space-between;
             align-items: center;
             margin: 0;
-            position: relative; /* Added for positioning */
+            position: relative;
+            /* Added for positioning */
         }
 
         .navbar a {
@@ -248,7 +249,6 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            z-index: -1;
         }
 
         .contacts-links {
@@ -296,51 +296,80 @@
         }
 
         .navbar-menu {
-            display: flex; /* Show menu items in a row */
-            gap: 15px; /* Space between links */
+            display: flex;
+            /* Show menu items in a row */
+            gap: 15px;
+            /* Space between links */
         }
 
         .navbar-toggle {
-            display: none; /* Hide toggle by default */
-            cursor: pointer; /* Pointer cursor for toggle */
+            display: none;
+            /* Hide toggle by default */
+            cursor: pointer;
+            /* Pointer cursor for toggle */
         }
 
         @media (max-width: 768px) {
             .navbar-menu {
-                display: none; /* Hide menu items on small screens */
-                flex-direction: column; /* Stack items vertically */
-                position: absolute; /* Positioning for dropdown */
-                top: 50px; /* Position below navbar */
-                right: 0; /* Align to the right */
-                background-color: #2E3440; /* Match background */
-                width: 100%; /* Full width */
-                z-index: 1; /* Ensure it appears above other content */
+                display: none;
+                /* Hide menu items on small screens */
+                flex-direction: column;
+                /* Stack items vertically */
+                position: absolute;
+                /* Positioning for dropdown */
+                top: 50px;
+                /* Position below navbar */
+                right: 0;
+                /* Align to the right */
+                background-color: #2E3440;
+                /* Match background */
+                width: 100%;
+                /* Full width */
+                z-index: 1;
+                /* Ensure it appears above other content */
             }
 
             .navbar-menu.active {
-                display: flex; /* Show menu when active */
+                display: flex;
+                /* Show menu when active */
             }
 
             .navbar-toggle {
-                display: block; /* Show toggle on small screens */
+                display: block;
+                /* Show toggle on small screens */
             }
         }
 
         .scroll-to-top {
-            display: none; /* Hidden by default */
-            position: fixed; /* Fixed position */
-            bottom: 20px; /* Distance from bottom */
-            right: 20px; /* Distance from right */
-            background-color: #2E3440; /* Background color */
-            color: white; /* Text color */
-            border: none; /* No border */
-            border-radius: 50%; /* Circular button */
-            width: 50px; /* Width */
-            height: 50px; /* Height */
-            cursor: pointer; /* Pointer cursor */
-            align-items: center; /* Center content */
-            justify-content: center; /* Center content */
-            display: flex; /* Flexbox for centering */
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Fixed position */
+            bottom: 20px;
+            /* Distance from bottom */
+            right: 20px;
+            /* Distance from right */
+            background-color: #2E3440;
+            /* Background color */
+            color: white;
+            /* Text color */
+            border: none;
+            /* No border */
+            border-radius: 50%;
+            /* Circular button */
+            width: 50px;
+            /* Width */
+            height: 50px;
+            /* Height */
+            cursor: pointer;
+            /* Pointer cursor */
+            align-items: center;
+            /* Center content */
+            justify-content: center;
+            /* Center content */
+            display: flex;
+            /* Flexbox for centering */
+            z-index: 1;
         }
     </style>
 </head>
@@ -370,7 +399,7 @@
     </div>
     <div class="colaborations" id="colaborations">
         <img src="images/Siemens-Logo.png" class="logo" alt="siemens" />
-    <!-- colaborations -->
+        <!-- colaborations -->
         <img src="images/nokia.png" class="logo" alt="nokia" />
     </div>
 
@@ -671,7 +700,7 @@
         }
 
         // Show button when scrolling past the bio section
-        window.onscroll = function() {
+        window.onscroll = function () {
             const colabSection = document.getElementById('colaborations'); // Assuming bio section has this ID
             const scrollToTopButton = document.getElementById('scrollToTop');
             const colabOffset = colabSection.offsetTop + colabSection.offsetHeight; // Bottom of bio section
@@ -690,9 +719,9 @@
 </body>
 <footer>
     <div class="contacts" id="links">
-        <div class="contacts-links" "> <!-- Added flexbox for alignment -->
+        <div class="contacts-links">
             <a href=" https://github.com/thatsBruno" target="_blank">
-            <img src="images/icons8-github-100.png" alt="Github" class="social-icon" />
+                <img src="images/icons8-github-100.png" alt="Github" class="social-icon" />
             </a>
             <a href="https://www.linkedin.com/in/brunodasilvaribeiro" target="_blank">
                 <img src="images/icons8-linkedin-100.png" alt="LinkedIn" class="social-icon" />
