add some styling

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         }
 
         .skill {
-            background-color: #4C566A;
+            background-color: #4c566a3d;
             /* Skill background */
             padding: 10px;
             border-radius: 5px;
@@ -166,7 +166,8 @@
         }
 
         .skill:hover {
-            box-shadow: 0 0 10px #88C0D0;
+            box-shadow: 0 0 10px #03cdff;
+            border-color: 0 0 10px #03cdff;
             /* Glow effect */
         }
 
@@ -392,9 +393,7 @@
             <img src="images/engineer-img.png" alt="engineer" />
         </div>
         <p id="experience">
-            Hi, I'm Bruno, a software engineer working on physical and virtual devices with ARM/Intel architecture,
-            developing
-            microservices and plugins with Go.
+            Learn about my path in the software engineering world, while I continuously grow to become a Tech Lead.
         </p>
     </div>
     <div class="colaborations" id="colaborations">
@@ -423,7 +422,7 @@
         </div>
 
         <div class="resume" id="resume">
-            <h2>Work Experience</h2>
+            <h2>My Experience</h2>
             <div class="experience">
                 <div class="experience-time">2024 <small>May</small> - <i><small>Present</small></i></div>
                 <div class="experience-details">
@@ -668,15 +667,16 @@
             <h2>Tech Stack</h2>
             <h3>Backend</h3>
             <div class="skills">
+                <div class="skill">Go</div>
                 <div class="skill">.NET</div>
                 <div class="skill">C#</div>
-                <div class="skill">Go</div>
-                <div class="skill">PostgreSQL</div>
+                <div class="skill">Java</div>
             </div>
             <h3>Frontend</h3>
             <div class="skills">
                 <div class="skill">Angular</div>
                 <div class="skill">Typescript</div>
+                <div class="skill">Javascript</div>
                 <div class="skill">NodeJS</div>
             </div>
             <h3>Other</h3>
@@ -686,6 +686,7 @@
                 <div class="skill">Gitlab</div>
                 <div class="skill">Docker</div>
                 <div class="skill">AWS</div>
+                <div class="skill">PostgreSQL</div>
                 <div class="skill">WSL</div>
             </div>
         </div>
