--- a/index.html
+++ b/index.html
@@ -406,19 +406,28 @@
 
         <div class="bio" id="bio">
             <h2>About Me</h2>
-            Hi, I'm Bruno a Software Engineer that's open minded, inquisitive, and life-long learner, with mentorship
-            mentality and helping other developers grow professionally.<br>
-            A little about my background, I've graduate from DeMontfort University, UK, and currently I'm working at
-            Siemens in Industrial Edge where I have the opportunity to contribute to architectural decisions and thrive
-            in a dynamic and enterprise project.
+            Hi, I'm Bruno, a Software Engineer who is open-minded, inquisitive, and a life-long learner, with a
+            mentorship mentality and a passion for helping other developers grow professionally.
             <br>
             <br>
-            Besides work, youl'll catch me either tinkering with some new framework or my vscode config with Vim
+            A bit about my background: I graduated from DeMontfort University, UK, and after returning home, I started
+            working at Nokia, where I gained experience in network integration. A few months later, I joined Siemens,
+            where I worked on a mature project and had the opportunity to learn extensively about microservices, CI/CD,
+            the .NET ecosystem, Angular, and the full flow of web apps from backend to frontend. I contributed to
+            implementing and developing new features as well as fixing bugs.
+            <br>
+            <br>
+            Currently, I'm working on an Industrial Edge project, where I contribute to architectural decisions and
+            thrive in a dynamic enterprise environment. I develop features and plugins in Go for both virtual and
+            physical devices, and handle deployment and testing on GitLab’s pipeline.
+            <br>
+            <br>
+            When I'm not working, you'll find me tinkering with new frameworks or fine-tuning my VSCode config with Vim
             keybinds.
             <br>
             <br>
-            Outside of work, I enjoy doing crossfit and reading books on those 15min books apps, either about technology
-            or a future time with technology that is yet to come.
+            Outside of tech, I enjoy doing CrossFit and reading bite-sized books on apps, mostly about technology or
+            futuristic concepts involving tech.
         </div>
 
         <div class="resume" id="resume">
@@ -675,6 +684,7 @@
             <h3>Frontend</h3>
             <div class="skills">
                 <div class="skill">Angular</div>
+                <div class="skill">React</div>
                 <div class="skill">Typescript</div>
                 <div class="skill">Javascript</div>
                 <div class="skill">NodeJS</div>
@@ -686,6 +696,7 @@
                 <div class="skill">Gitlab</div>
                 <div class="skill">Docker</div>
                 <div class="skill">AWS</div>
+                <div class="skill">Redis</div>
                 <div class="skill">PostgreSQL</div>
                 <div class="skill">WSL</div>
             </div>
