--- a/index.html
+++ b/index.html
@@ -413,12 +413,11 @@
             A bit about my background: I graduated from DeMontfort University, UK, and after returning home, I started
             working at Nokia, where I gained experience in network integration. A few months later, I joined Siemens,
             where I worked on a mature project and had the opportunity to learn extensively about microservices, CI/CD,
-            the .NET ecosystem, Angular, and the full flow of web apps from backend to frontend. I contributed to
-            implementing and developing new features as well as fixing bugs.
+            the .NET ecosystem, Angular, and the full flow of web apps from backend to frontend, up to the deployment of databases and services on AWS.
             <br>
             <br>
-            Currently, I'm working on an Industrial Edge project, where I contribute to architectural decisions and
-            thrive in a dynamic enterprise environment. I develop features and plugins in Go for both virtual and
+            Currently, I'm working on an Industrial Edge project at Siemens, where I contribute to code reviews, architectural decisions and
+            thrive in a dynamic enterprise environment, as well as developing features and plugins in Go for both virtual and
             physical devices, and handle deployment and testing on GitLab’s pipeline.
             <br>
             <br>
