--- a/index.html
+++ b/index.html
@@ -483,6 +483,21 @@
             <div class="project">
                 <div class="experience-time">
 
+                    <a href="https://github.com/thatsBruno/blogo" target="_blank">
+                        <img src="images/blogo.png" alt="blogo" class="project-img">
+                    </a>
+                </div>
+                <div class="experience-details">
+                    <strong>Blog Platform</strong><br>
+                    <small>
+                        Blog backend microservice developed with Go using goose, sqlc and postgresql within Docker.
+                    </small>
+                    <small class="tech-label">Technologies: Go, Docker</small> <!-- Added class for styling -->
+                </div>
+            </div>
+            <div class="project">
+                <div class="experience-time">
+
                     <a href="https://github.com/thatsBruno/cc" target="_blank">
                         <img src="images/cc.jpeg" alt="cc" class="project-img">
                     </a>
