update blogo details

--- a/index.html
+++ b/index.html
@@ -490,7 +490,8 @@
                 <div class="experience-details">
                     <strong>Blog Platform</strong><br>
                     <small>
-                        Blog backend microservice developed with Go using goose, sqlc and postgresql within Docker.
+                        Blog backend microservice developed with Go using goose for the schema scafolding, sqlc as a querying mediator, and postgresql within Docker.
+                        Users can have feeds, and follow feeds, more info in the readme.
                     </small>
                     <small class="tech-label">Technologies: Go, Docker</small> <!-- Added class for styling -->
                 </div>
