--- a/index.html
+++ b/index.html
@@ -483,6 +483,23 @@
             <div class="project">
                 <div class="experience-time">
 
+                    <a href="https://github.com/thatsBruno/p2p-golang" target="_blank">
+                        <img src="images/p2p.jpeg" alt="p2p" class="project-img">
+                    </a>
+                </div>
+                <div class="experience-details">
+                    <strong>Peer 2 peer</strong><br>
+                    <small>
+                        Peer to peer microservice written in Go, utilizing TCP transport methods for files.
+                        <br> Currently work in progress...
+                    </small>
+                    <!-- Moved technologies to the bottom -->
+                    <small class="tech-label">Technologies: Go, TCP</small> <!-- Added class for styling -->
+                </div>
+            </div>
+            <div class="project">
+                <div class="experience-time">
+
                     <a href="https://github.com/thatsBruno/blogo" target="_blank">
                         <img src="images/blogo.png" alt="blogo" class="project-img">
                     </a>
@@ -499,35 +516,17 @@
             <div class="project">
                 <div class="experience-time">
 
-                    <a href="https://github.com/thatsBruno/cc" target="_blank">
-                        <img src="images/cc.jpeg" alt="cc" class="project-img">
+                    <a href="https://github.com/thatsBruno/stocksGraph" target="_blank">
+                        <img src="images/stocksGraph.png" alt="stocksGraph" class="project-img">
                     </a>
                 </div>
                 <div class="experience-details">
-                    <strong>Coding Challenges</strong><br>
+                    <strong>Stocks Graph</strong><br>
                     <small>
-                        Weekly coding challenges by John Crickett.
-                        <br> Currently work in progress...
+                        In this project we receive stocks from a .json file and display in a table allowing the user to click individually on a stock and checking the graph of the Value upon time of the stock.
                     </small>
                     <!-- Moved technologies to the bottom -->
-                    <small class="tech-label">Technologies: Go</small> <!-- Added class for styling -->
-                </div>
-            </div>
-            <div class="project">
-                <div class="experience-time">
-
-                    <a href="https://github.com/thatsBruno/p2p-golang" target="_blank">
-                        <img src="images/p2p.jpeg" alt="p2p" class="project-img">
-                    </a>
-                </div>
-                <div class="experience-details">
-                    <strong>Peer 2 peer</strong><br>
-                    <small>
-                        Peer to peer microservice written in Go, utilizing TCP transport methods for files.
-                        <br> Currently work in progress...
-                    </small>
-                    <!-- Moved technologies to the bottom -->
-                    <small class="tech-label">Technologies: Go, TCP</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: NodeJS, React, Docker</small> <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
