--- a/index.html
+++ b/index.html
@@ -432,36 +432,29 @@
         <div class="resume" id="resume">
             <h2>My Experience</h2>
             <div class="experience">
-                <div class="experience-time">2024 <small>May</small> - <i><small>Present</small></i></div>
+                <div class="experience-time">2023 <small>Feb</small> - <i><small>Present</small></i></div>
                 <div class="experience-details">
                     <strong>Software Engineer</strong> - <i>Siemens</i><br>
                     <small>
                         • Testing and developing microservices, features for virtual and physical devices with ARM/Intel
-                        architecture with Go.<br>
+                        architecture with Go and with AWS EC2 instances.
+                        <br>
                         • Built the CICD for our project, where we need to deploy virtual devices and device managers,
-                        connecting them together and run tests.<br>
+                        connecting them together and run tests.
+                        <br>
                         • Helping and leading the team as a second in line after our project Architect.
                     </small>
-                </div>
-            </div>
-            <div class="experience">
-                <div class="experience-time">2023 <small>Nov</small> - 2024 <small>May</small></div>
-                <div class="experience-details">
-                    <strong>Software Engineer</strong> - <i>JobDeploy @ Siemens</i><br>
-                    <small>
-                        • Developing .NET/Angular microservices and features to integrate with existent applications and
-                        services.<br>
-                        • Integration with services like AWS Cloudwatch and signalR.
-                    </small>
-                </div>
-            </div>
-            <div class="experience">
-                <div class="experience-time">2023 <small>Feb</small> - 2023 <small>Nov</small></div>
-                <div class="experience-details">
+                    <br>
+                    <br>
                     <strong>Full Stack Engineer</strong> - <i>Siemens</i><br>
                     <small>
                         • International enterprise project with DDD and Clean code, written in .NET and using Redis,
                         REST, SOAP, EF Core, Linq.
+                        <br>
+                        • Developing .NET/Angular microservices and features to integrate with existent applications and
+                        services.
+                        <br>
+                        • Integration with services like AWS Cloudwatch and signalR.
                         <br>• Winner of the Hackath0n Siemens DI IT 2023.
                     </small>
                 </div>
