Remove redundant text

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     </small>
                     <br>
                     <br>
-                    <strong>Full Stack Engineer</strong> - <i>Siemens</i><br>
+                    <strong>Full Stack Engineer</strong><br>
                     <small>
                         • International enterprise project with DDD and Clean code, written in .NET and using Redis,
                         REST, SOAP, EF Core, Linq.
