--- a/index.html
+++ b/index.html
@@ -691,6 +691,7 @@
             <div class="skills">
                 <div class="skill">Angular</div>
                 <div class="skill">React</div>
+                <div class="skill">Typescript</div>
             </div>
             <h3>Other</h3>
             <div class="skills">
