--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
         <div class="navbar-toggle" onclick="toggleMenu()">☰</div> <!-- Added toggle button -->
         <div class="navbar-menu" id="navbarMenu"> <!-- Added menu container -->
             <a href="#bio">About</a>
+            <a href="#tech-stack">Tech Stack</a>
             <a href="#resume">Experience</a>
             <a href="#projects">Projects</a>
-            <a href="#tech-stack">Tech Stack</a>
         </div>
     </div>
     <div class="title">
@@ -492,6 +492,14 @@
                         connecting them together and run tests.
                         <br>
                         • Helping and leading the team as a second in line after our project Architect.
+                    </small>
+                    <br>
+                    <br>
+                    <strong>Full Stack Engineer</strong><br>
+                    <small>
+                        • Developing of fullstack backend for frontend microservices to integrate with existent applications and services.
+                        <br>
+                        • .NET/Angular, DDD structure and integration with services such as AWS and Gitlab.
                     </small>
                     <br>
                     <br>
