--- a/index.html
+++ b/index.html
@@ -497,14 +497,8 @@
                     <br>
                     <strong>Full Stack Engineer</strong><br>
                     <small>
-                        • Developing of fullstack backend for frontend microservices to integrate with existent applications and services.
+                        • Winner of the Hackath0n Siemens DI IT 2023.
                         <br>
-                        • .NET/Angular, DDD structure and integration with services such as AWS and Gitlab.
-                    </small>
-                    <br>
-                    <br>
-                    <strong>Full Stack Engineer</strong><br>
-                    <small>
                         • International enterprise project with DDD and Clean code, written in .NET and using Redis,
                         REST, SOAP, EF Core, Linq.
                         <br>
@@ -512,7 +506,9 @@
                         services.
                         <br>
                         • Integration with services like AWS Cloudwatch and signalR.
-                        <br>• Winner of the Hackath0n Siemens DI IT 2023.
+                        <br>
+                        • Developing of fullstack backend for frontend microservices to integrate with existent applications and services.
+                        <br>
                     </small>
                 </div>
             </div>
