--- a/index.html
+++ b/index.html
@@ -375,15 +375,19 @@
 
         .tech-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(90px, 1fr)); /* Responsive grid */
-            gap: 10px; /* Space between items */
-            justify-items: center; /* Center items in their grid cells */
-            margin-top: 20px; /* Space above the grid */
+            grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+            /* Responsive grid */
+            gap: 10px;
+            /* Space between items */
+            justify-items: center;
+            /* Center items in their grid cells */
+            margin-top: 20px;
+            /* Space above the grid */
         }
 
         .tech-icon {
-            width: 50px; 
-            height: auto; 
+            width: 50px;
+            height: auto;
         }
     </style>
 </head>
@@ -406,7 +410,8 @@
             <img src="images/engineer-img.png" alt="engineer" />
         </div>
         <p id="experience">
-            Learn about my path in the software engineering world, while I continuously grow to become a Tech Lead.
+            Learn about my path in the software engineering world, while I continuously grow, currently I'm specializing
+            in Applied Artificial Intelligence and Machine Learning.
         </p>
     </div>
     <div class="colaborations" id="colaborations">
@@ -426,12 +431,20 @@
             A bit about my background: I graduated from DeMontfort University, UK, and after returning home, I started
             working at Nokia, where I gained experience in network integration. A few months later, I joined Siemens,
             where I worked on a mature project and had the opportunity to learn extensively about microservices, CI/CD,
-            the .NET ecosystem, Angular, and the full flow of web apps from backend to frontend, up to the deployment of databases and services on AWS.
+            the .NET ecosystem, Angular, and the full flow of web apps from backend to frontend, up to the deployment of
+            databases and services on AWS.
             <br>
             <br>
-            Currently, I'm working on an Industrial Edge project at Siemens, where I contribute to code reviews, architectural decisions and
-            thrive in a dynamic enterprise environment, as well as developing features and plugins in Go for both virtual and
+            Later, I worked on an Industrial Edge project at Siemens, where I contributed to code reviews, architectural
+            decisions and
+            grew in a dynamic enterprise environment, as well as developed features and plugins in Go for both virtual
+            and
             physical devices, and handle deployment and testing on GitLab’s pipeline.
+            <br>
+            <br>
+            Currently, besides working on a new project that involves the development of features to categorize and
+            supervise departements, I'm taking a specialization in Applied Artificial Intelligence and Machine Learning,
+            where I'm learning about the latest trends in AI and ML, and how to apply them in real-world scenarios.
             <br>
             <br>
             When I'm not working, you'll find me tinkering with new frameworks or fine-tuning my VSCode config with Vim
@@ -485,33 +498,24 @@
                 <div class="experience-details">
                     <strong>Software Engineer</strong> - <i>Siemens</i><br>
                     <small>
+                        • Early-stage development and problem-solving on an internal project, focusing on features such
+                        as categorizing and managing internal departments.
+                    </small>
+                    <br>
+                    <br>
+                    <strong>Software Engineer</strong><br>
+                    <small>
                         • Testing and developing microservices, features for virtual and physical devices with ARM/Intel
                         architecture with Go and with AWS EC2 instances.
                         <br>
-                        • Built the CICD for our project, where we need to deploy virtual devices and device managers,
-                        connecting them together and run tests.
-                        <br>
-                        • Helping and leading the team as a second in line after our project Architect.
+                        • Built the CICD for our project, where we need to deploy virtual devices and device managers.
                     </small>
                     <br>
                     <br>
-                    <strong>Full Stack Engineer</strong><br>
+                    <strong>Software Engineer</strong><br>
                     <small>
-                        • Developing of fullstack backend for frontend microservices to integrate with existent applications and services.
-                        <br>
-                        • .NET/Angular, DDD structure and integration with services such as AWS and Gitlab.
-                    </small>
-                    <br>
-                    <br>
-                    <strong>Full Stack Engineer</strong><br>
-                    <small>
-                        • International enterprise project with DDD and Clean code, written in .NET and using Redis,
-                        REST, SOAP, EF Core, Linq.
-                        <br>
                         • Developing .NET/Angular microservices and features to integrate with existent applications and
                         services.
-                        <br>
-                        • Integration with services like AWS Cloudwatch and signalR.
                         <br>• Winner of the Hackath0n Siemens DI IT 2023.
                     </small>
                 </div>
@@ -557,7 +561,8 @@
                 <div class="experience-details">
                     <strong>Blog Platform</strong><br>
                     <small>
-                        Blog backend microservice developed with Go using goose for the schema scafolding, sqlc as a querying mediator, and postgresql within Docker.
+                        Blog backend microservice developed with Go using goose for the schema scafolding, sqlc as a
+                        querying mediator, and postgresql within Docker.
                         Users can have feeds, and follow feeds, more info in the readme.
                     </small>
                     <small class="tech-label">Technologies: Go, Docker</small> <!-- Added class for styling -->
@@ -573,10 +578,12 @@
                 <div class="experience-details">
                     <strong>Stocks Graph</strong><br>
                     <small>
-                        In this project we receive stocks from a .json file and display in a table allowing the user to click individually on a stock and checking the graph of the Value upon time of the stock.
+                        In this project we receive stocks from a .json file and display in a table allowing the user to
+                        click individually on a stock and checking the graph of the Value upon time of the stock.
                     </small>
                     <!-- Moved technologies to the bottom -->
-                    <small class="tech-label">Technologies: NodeJS, React, Docker</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: NodeJS, React, Docker</small>
+                    <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
